# amsterdam-hack

./: .env  Cargo.toml  drone_types.json
frontend/amsterdam-hack-frontend/: package-lock.json  package.json
frontend/amsterdam-hack-frontend/app/: globals.css  page.tsx
python/: main.py
sdr-sender/: Cargo.toml
sdr-sender/src/: main.rs
src/: detection.rs  main.rs  processing.rs  udp.rs  utils.rs  websockets.rs
