[package]
name = "amsterdam-hack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.10.2"
actix-web-actors = "4.3.1"
env_logger = "0.11.7"
log = "0.4.27"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spectrum-analyzer = "1.6.0"
wav_io = "0.1.15"
